<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mapViewFragment"
        android:icon="@drawable/ic_map_view_24"
        android:title="@string/bottom_menu_map_view" />
    <item
        android:id="@+id/listViewFragment"
        android:icon="@drawable/ic_list_view_24"
        android:title="@string/bottom_menu_list_view" />
    <item
        android:id="@+id/workmatesFragment"
        android:icon="@drawable/ic_workmates_people_24"
        android:title="@string/bottom_menu_workmates" />
</menu>