<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">Go4Lunch</string>
    <!-- Main activity -->
    <string name="bottom_menu_map_view">map view</string>
    <string name="bottom_menu_list_view">list view</string>
    <string name="bottom_menu_workmates">workmates</string>
    <string name="drawer_menu_your_lunch">YOUR LUNCH</string>
    <string name="drawer_menu_logout">LOGOUT</string>
    <string name="drawer_menu_settings">SETTINGS</string>
    <string name="detail_restaurant_button_like">LIKE</string>
    <string name="detail_restaurant_button_call">CALL</string>
    <string name="detail_restaurant_button_website">WEBSITE</string>
    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb420763051691337</string>
    <string name="facebook_app_id" translatable="false">877083879784588</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb877083879784588</string>
    <!-- Activity_authentication_ -->
    <string name="activity_authentication_text_view_subtitle">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="activity_authentication_button_facebook">Sign in with Facebook</string>
    <string name="activity_authentication_button_google">Sign in with Google</string>
    <string name="alert_dialog_neutral_button">Cancel</string>
    <string name="error_no_internet">Sign in failed due to lack of network connection.</string>
    <string name="error_authentication_failed">Authentication failed</string>
    <string name="alert_dialog_title">Attention</string>
    <!-- image description -->
    <string name="description_user_avatar">User avatar</string>
    <string name="description_gps_location_button">gps location button</string>
    <string name="description_select_restaurant">select restaurant</string>
    <!-- fragment list view -->
    <string name="fragment_list_view_close_permanently_restaurant">Permanently close</string>
    <string name="fragment_list_view_message_download">Downloading restaurants and users information</string>
    <string name="fragment_list_view_message_no_permission">Permission to access your location is required to find restaurant swipe down to try again</string>
    <string name="fragment_list_view_message_search_position">Search for current position</string>
    <string name="fragment_list_view_message_no_restaurant_found">No restaurant found swipe down to try again</string>
    <string name="fragment_list_view_distance" translatable="false">%1$sm</string>
    <string name="fragment_list_view_workmate_number" translatable="false">(%1$s)</string>
    <string name="fragment_list_view_message_download_restaurant">Downloading restaurants information</string>
    <string name="fragment_list_view_message_search_workmates">Downloading users information</string>
    <string name="fragment_list_view_message_localization">localization in progress</string>
    <string name="fragment_workmates_name" translatable="false">%1$s (%2$s)</string>
    <!-- fragment detail restaurant -->
    <string name="restaurant_detail_fragment_message_no_number_found">no phone found</string>
    <string name="restaurant_detail_fragment_message_no_web_site_found">no web site found</string>
    <string name="fragment_list_view_message_no_timetable">Timetable not available</string>
    <!-- AlertDialog permission  -->
    <string name="alert_dialog_permission_button_setting">Setting</string>
    <string name="alert_dialog_permission_button_cancel">Cancel</string>
    <string name="alert_dialog_permission_title">Permission required</string>
    <string name="alert_dialog_permission_location_message">Permission to access your location is required to find restaurants in the vicinity. \nTo ensure the proper functioning of this functionality the location permission must be activated in the application settings</string>
    <string name="alert_dialog_permission_call_phone_message">Permission call phone is required. \nTo ensure the proper functioning of this functionality the call phone must be activated in the application settings</string>
    <string name="setting_fragment_message_account_delete">Your account has been deleted</string>
    <string name="setting_fragment_dialog_message_account_delete">Are you sure you want to delete your account?\nAll your data will be deleted\nThe removal will be irreversible</string>
    <string name="setting_fragment_dialog_title_account_delete">Delete Account</string>
    <string name="setting_fragment_dialog_button_validate">OK</string>
    <!-- fragment workmate  -->
    <string name="fragment_workmates_not_decide">%1$s hasn\'t decided yet</string>
    <string name="detail_restaurant_joining_message">%1$s is joining!</string>
    <!-- tools bar  -->
    <string name="search_restaurants_hint">Search</string>
    <string name="main_activity_tools_bar_valid_button_description">button for valid search</string>
    <string name="main_activity_tools_bar_clear_button_description">button for close search bar</string>
    <string name="main_activity_tools_bar_open_button_description">button for open search bar</string>
    <!-- Notification  -->
    <string name="notification_title">Your lunch today</string>
    <string name="notification_text">Your restaurant: %1$s.\nAddress: %2$s \nParticipants: %3$s</string>
    <!-- Settings  -->
    <string name="settings_preference_category_profile">Profile</string>
    <string name="settings_preference_category_alerts">Alerts</string>
    <string name="settings_preference_category_map">Map</string>
    <string name="settings_preference_summary_delete_account">Delete Account</string>
    <string name="settings_preference_summary_notification">Lunch notification</string>
    <string name="settings_preference_dialog_title_notification_hour">Select an hour</string>
    <string name="settings_preference_summary_map_zoom">Default map zoom</string>
    <string name="settings_preference_summary_radius">Restaurant search radius in meters</string>
    <string name="settings_preference_summary_notification_hour">Notification display hour</string>
    <string name="drawer_toast_message_no_launch">You have not yet chosen a restaurant.</string>
    <string name="fragment_list_view_close_today_restaurant">Close today</string>
    <string name="fragment_list_view_close_temporarily_restaurant">Temporarily closed</string>
</resources>