<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="notification_hour">
        <item>11</item>
        <item>12</item>
        <item>13</item>
    </string-array>
</resources>