<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/yourLunch"
        android:icon="@drawable/ic_your_lunch_24"
        android:title="@string/drawer_menu_your_lunch" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/drawer_menu_settings" />
    <item
        android:id="@+id/logout_item"
        android:icon="@drawable/ic_logout_24"
        android:title="@string/drawer_menu_logout" />
</menu>